Change Log for OpenXava project
===============================

- Fix: Top button bar overlaps left menu.
- Fix: Editor defined in @Tab doesn't work if exists a <tab> with for-all-models in tabs-default-values.xml.
- Fix: Opening the current module in other browser tab using the left menu initializes the current one.
- Fix: Group inside a section in a collection element fails.
- Fix: Calculated properties inside groups editing a collection detail are not recalculated.
- Fix: Not preview for @File properties in list mode with files with .jpeg extension.
- Lesson 2 of course modified to introduce annotations as alternative to stereotypes.
- Fix: Unneeded horizontal scrollbar when many modules on top tabs.

OpenXava 6.6 (2021-10-26)
-------------------------
- Last used modules are remembered and they can be accessed using tabs at the top of the module.
- Property rememberVisitedModules in naviox.properties to remember the modules visited in last session.
- Fixed modules (those declared with fixModulesOnTopMenu in naviox.properties) are shown on top as tabs.
- Top button bar is fixed on top of the page when the user scrolls the detail or list view. 
- Left menu with modules is fixed when the user scrolls the main view of the module.
- Responsive top bar button, now when the UI is narrowed the action labels are hidden.	 
- Tooltips for actions include the name of the action, useful when action label is not shown.
- Java annotations can be associated to editors in editors.xml.
- @Password, @Money, @TextArea, @Label, @DateTime as alternative to stereotypes.
- @Discussion, @Icon, @Telephone, @IP, @EmailList, @MAC as alternative to stereotypes.
- @StringTime annotation as alternative to TIME stereotype with String properties. 
- @HtmlText as alternative to HTML_TEXT, with @HtmlText(simple=true) as alternative to SIMPLE_HTML_TEXT.
- Java annotations can be associated to defaul types in annotation-type-default.xml.