@@ -72,7 +72,6 @@
       <pre><code class="java">package com.yourcompany.invoicing.model;
  
 import javax.persistence.*;
-import org.hibernate.annotations.GenericGenerator;
 import org.openxava.annotations.*;
 import lombok.*;
  
@@ -82,7 +81,6 @@ public class Category {
     @Id
     @Hidden // The property is not shown to the user. It's an internal identifier
     @GeneratedValue(generator="system-uuid") // Universally Unique Identifier (1)
-    @GenericGenerator(name="system-uuid", strategy = "uuid")
     @Column(length=32)
     String oid;
  
