@@ -72,7 +72,6 @@
       <pre><code class="java">package com.tuempresa.facturacion.modelo;
  
 import javax.persistence.*;
-import org.hibernate.annotations.GenericGenerator;
 import org.openxava.annotations.*;
 import lombok.*;
  
@@ -82,7 +81,6 @@ public class Categoria {
     @Id
     @Hidden // La propiedad no se muestra al usuario. Es un identificador interno
     @GeneratedValue(generator="system-uuid") // Identificador Universal Único (1)
-    @GenericGenerator(name="system-uuid", strategy = "uuid")
     @Column(length=32)
     String oid;
  
