@@ -20,12 +20,10 @@
         Basic domain model (2)</a> | <a class="wiki_link" href="refining-user-interface_en.html">4.
         Refining the user interface</a> | <a class="wiki_link" href="agile-development_en.html">5.
         Agile development</a> | <b><span class="wiki_link">6. Mapped superclass
-          inheritance</span></b> |
-      <a class="wiki_link" href="entity-inheritance_en.html">7. Entity
-        inheritance</a> |
-      <a class="wiki_link" href="view-inheritance_en.html">8. View inheritance</a>
-      | <a class="wiki_link" href="basic-business-logic_en.html">9. Basic
-        business logic</a> | <a class="wiki_link" href="validation_en.html">10.
+          inheritance</span></b> | <a class="wiki_link" href="entity-inheritance_en.html">7.
+        Entity inheritance</a> | <a class="wiki_link" href="view-inheritance_en.html">8.
+        View inheritance</a> | <a class="wiki_link" href="basic-business-logic_en.html">9.
+        Basic business logic</a> | <a class="wiki_link" href="validation_en.html">10.
         Advanced validation</a> | <a class="wiki_link" href="refining-standard-behavior_en.html">11.
         Refining the standard behavior</a> | <a class="wiki_link" href="business-logic-behavior_en.html">12.
         Behavior &amp; business logic</a> | <a class="wiki_link" href="references-collections_en.html">13.
@@ -53,7 +51,6 @@
       The <em>Author</em>, <em>Category</em> and <em>Invoice</em> classes
       have some common code, the <em>oid</em> field definition:<br>
       <pre><code class="java">@Id @GeneratedValue(generator="system-uuid") @Hidden
-@GenericGenerator(name="system-uuid", strategy="uuid")
 @Column(length=32)
 String oid;
 </code></pre> This code is just the same for all those classes. You know that
@@ -70,7 +67,6 @@ String oid;
       <pre><code class="java">package com.yourcompany.invoicing.model;
  
 import javax.persistence.*;
-import org.hibernate.annotations.*;
 import org.openxava.annotations.*;
 import lombok.*;
  
@@ -79,7 +75,6 @@ import lombok.*;
 public class Identifiable {
  
     @Id @GeneratedValue(generator="system-uuid") @Hidden
-    @GenericGenerator(name="system-uuid", strategy="uuid")
     @Column(length=32)
     String oid; // Property definition includes OpenXava and JPA annotations
  
